--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,55 +5,63 @@
     android:layout_height="match_parent"
     tools:context="com.udacity.sandwichclub.DetailActivity">
 
-    <ImageView
-        android:id="@+id/image_iv"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/sandwich_picture_content_description"
-        android:scaleType="centerCrop" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/origin_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detail_also_known_as_label"
-        android:textStyle="bold" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    style="@style/image_background"
+                    android:layout_height="200dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detail_ingredients_label"
-        android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/image_iv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/sandwich_picture_content_description"
+                        android:scaleType="centerCrop" />
+                </FrameLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detail_place_of_origin_label"
-        android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/heading"
+                        android:text="@string/detail_also_known_as_label" />
+                    <TextView
+                        android:id="@+id/tv_detail_also_known_as_label"
+                        style="@style/content" />
 
-    <TextView
-        android:id="@+id/description_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+                    <TextView
+                        style="@style/heading"
+                        android:text="@string/detail_ingredients_label"/>
+                    <TextView
+                        android:id="@+id/tv_detail_ingredients"
+                        style="@style/content" />
 
-    <TextView
-        android:id="@+id/ingredients_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+                    <TextView
+                        style="@style/heading"
+                        android:text="@string/detail_place_of_origin_label" />
+                    <TextView
+                        android:id="@+id/tv_detail_place_of_origin"
+                        style="@style/content"/>
 
-    <TextView
-        android:id="@+id/also_known_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+                    <TextView
+                        style="@style/heading"
+                        android:text="@string/detail_description_label" />
+                    <TextView
+                        android:id="@+id/tv_description"
+                        style="@style/content"/>
+                </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/detail_description_label"
-        android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
